FlightPath 6.x Changelog
========================

2023-11-29
  Made modifications to watchdog entries when an advising session is saved (to contain the advising session token).
  
  Made changes to the Advisor Use report to show number of advisings per term.
  

2023-11-06
  Made it so pages can request that "messages" (from fp_add_message) are not shown, by adding ?fp_messages=none to the URL.  Useful in iframes.
  

2023-10-25
  Modified stats.module, so that the "FlightPath Use Summary" report looks at "display_dashboard" to determine logins, 
  rather than "login" entries in the watchdog table, as that is not an accurate count if the user used SAML or LDAP to
  log in.
  
  Also modified this report to no longer display "mobile" user counts, as this is deprecated and will not be used
  in the future.
   

2023-08-07
  Fixed minor issue with the way URLs were being displayed in the location and ref fields when viewing a watchdog entry.
  

2023-06-03
  Gave lassie module the ability to disable "maintenance mode" when a job fails.  See lassie modules'
  README.txt file for details.
  

2023-05-27
  Added advisingTermId and all fp_advising variables to javascript settings when viewing a student.
  
  Added advising_term_id to the render array when rendering an advising view screen.
  

2023-05-15
  Modified fp_add_js() so that "setting" values do not re-use keys.
  
  
2023-05-12
  Added extra data to $theme and $render when drawing course row and displaying the popup course information.
  
  To help with new registration module, added extra $unique_id variable to Course object.

  Added function to advise.js to set the course to advised, regardless of previous 
  state.


2023-04-11
  Changed the way that the Degree submit button is rendered, to make it easier for other modules to modify
  using hook_content_alter.
  

2023-04-09
  Made a small change to AdvisingScreen.  In draw_course_row(), there was always a random number added