@@ -1110,6 +1110,21 @@ label {
   filter: none;
 }
 
+/* For a smaller (width-wise) select field */
+.element-type-select-smaller select {
+  
+  font-size: 1.0em;
+  font-weight: normal;
+  border: 1px solid #8E929C;
+  padding: 1rem;  
+  width: 100%;
+  max-width: 250px;
+  box-shadow: 0px 1px 2px rgb(0,0,0,0.15);
+  border-radius: 4px;
+  filter: none;
+}
+
+
 
 .element-wrapper--hidden {
   display: none;
